搭建后端接口
1. 完成后端相关接口和实体的构建
2. 对前端结构进行微调
3. 对文档进行微调

--- a/docs/outline/代码生成器核心大纲.md
+++ b/docs/outline/代码生成器核心大纲.md
@@ -312,7 +312,8 @@ interface RequestType {
   createController: boolean,
   createService: boolean,
   createSimpleSql: boolean, 
-  prePackageName: string 
+  prePackageName: string,
+  fileName: string
 }
 ```
 
@@ -350,6 +351,7 @@ public class RequestVo {
     private boolean createService;
     private boolean createSimpleSql;
     private String prePackageName;
+    private String fileName;
     
     ......
 }
@@ -425,7 +427,6 @@ public class RequestVo {
 |uuid|java.util.UUID|通用唯一标识符，36位字符串格式|
 |json|String / com.fasterxml.jackson.databind.JsonNode|JSON文本，可映射为字符串或JSON对象|
 |jsonb|String / com.fasterxml.jackson.databind.JsonNode|二进制JSON（优化存储和查询），映射方式同json|
-|array (如integer[], varchar[])|对应基本类型数组（int[]、String[]）|PostgreSQL支持数组类型，直接映射为Java对应类型的数组|
 |enum|String / 自定义枚举类|枚举类型，可映射为字符串（存储枚举值）或自定义Java枚举类|
 |money|java.math.BigDecimal|货币类型，精确到分，建议用BigDecimal处理|
 |inet|String / java.net.InetAddress|IP地址（IPv4/IPv6），可映射为字符串或InetAddress对象|
